--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -8,22 +8,22 @@
     <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Информация: https://github.com/M66B/XPrivacy/</string>
-    <string name="app_app">Applications</string>
-    <string name="app_restriction">Categories</string>
+    <string name="app_app">Приложения</string>
+    <string name="app_restriction">Категории</string>
     <string name="menu_settings">Настройки</string>
-    <string name="menu_update">Check for update</string>
+    <string name="menu_update">Проверка за обновление</string>
     <string name="menu_report">Съобщаване за проблем</string>
-    <string name="menu_export">Export</string>
-    <string name="menu_import">Import</string>
-    <string name="menu_pro">Pro version</string>
+    <string name="menu_export">Експортиране</string>
+    <string name="menu_import">Импортиране</string>
+    <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
-    <string name="msg_noupdate">No update available</string>
+    <string name="msg_noupdate">Няма налично обновление</string>
     <string name="msg_restricted" formatted="false">%s е ограничен от XPrivacy</string>
     <string name="restrict_accounts">Сметки (Google, Facebook и т.н.)</string>
     <string name="restrict_boot">Стартиране (при пускане на системата)</string>
     <string name="restrict_browser">Браузър (отметки/история)</string>
     <string name="restrict_calendar">Календар</string>
-    <string name="restrict_calling">Actions (call, message, browser)</string>
+    <string name="restrict_calling">Действия (обаждане, съобщения, браузър)</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_identification">Идентификация (устройство, Wi-Fi)</string>
     <string name="restrict_internet">Интернет</string>
@@ -36,8 +36,8 @@
     <string name="restrict_system">Система (инсталирани приложения)</string>
     <string name="settings_restrict">Отбележи за ограничаване:</string>
     <string name="settings_expert">Режим за експерти</string>
-    <string name="settings_lat">Latitude</string>
-    <string name="settings_lon">Longitude</string>
+    <string name="settings_lat">Геогр. ширина</string>
+    <string name="settings_lon">Геогр. дължина</string>
     <string name="help_icon">Икона</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
