--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -17,13 +17,13 @@
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
     <string name="menu_all">Všetko</string>
-    <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
-    <string name="menu_app_store">Play Store</string>
-    <string name="msg_noupdate">K dispozícii nie je žiadna aktualizácia</string>
-    <string name="msg_restricted" formatted="false">%s obmedzené XPrivacy</string>
+    <string name="menu_app_launch">Spustiť</string>
+    <string name="menu_app_settings">Nastavenia</string>
+    <string name="menu_app_store">Obchod Play</string>
+    <string name="msg_noupdate">Nie je k dispozícii žiadna aktualizácia</string>
+    <string name="msg_restricted" formatted="false">%s obmedzené pomocou XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
-    <string name="msg_done">Done</string>
+    <string name="msg_done">Hotovo</string>
     <string name="restrict_accounts">Účty (Google, Facebook, atď.)</string>
     <string name="restrict_boot">Štart (beh po štarte systému)</string>
     <string name="restrict_browser">Prehliadač (záložky/história)</string>
