--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -37,7 +37,7 @@
     <string name="restrict_dictionary">Dictionnaire (utilisateur)</string>
     <string name="restrict_identification">Identification (Matériel)</string>
     <string name="restrict_internet">Internet</string>
-    <string name="restrict_isolation">Isolated storage</string>
+    <string name="restrict_isolation">Stockage isolé</string>
     <string name="restrict_location">Localisation (précise/approximative)</string>
     <string name="restrict_media">Média (audio, photo, vidéo)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
@@ -62,6 +62,6 @@
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
     <string name="help_used">a utilisé ces données</string>
-    <string name="help_dangerous">est dangereux</string>
+    <string name="help_dangerous">est dangereuse</string>
     
 </resources>
