--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -29,9 +29,9 @@
     <string name="msg_sure">Bist du sicher?</string>
     <string name="msg_done">Fertig</string>
     <string name="msg_reboot">Telefon-Neustart erforderlich</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet, dennoch ist unmöglich zu gewährleisten,
+\ndass es einwandfrei auf allen verschiedenen und einzelnen Geräten und für alle verschiedene und einzelne Apps funktioniert.
+\n\nVerwenden Sie XPrivacy ausschließlich auf Ihr eigenes Risiko.</b>\n\nBitte beachten Sie auch die Lizenz:</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
     <string name="restrict_calendar">Kalender</string>
