--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur: M. Bokhorst (M66B) \u00A9 2013 </string>
     <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_refresh">Rafraîchir</string>
     <string name="menu_settings">Paramètres</string>
     <string name="menu_template">Modèle</string>
     <string name="menu_update">Vérifier les mises à jour</string>
@@ -27,7 +27,7 @@
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
     <string name="msg_loading">Chargement</string>
-    <string name="msg_edit">Cliquer sur l\'icône de l\'application pour éditer les restrictions</string>
+    <string name="msg_edit">Cliquer sur l\'icône de l\'application pour éditer ses restrictions</string>
     <string name="msg_sure">Êtes-vous certain ?</string>
     <string name="msg_done">Effectué</string>
     <string name="msg_reboot">Redémarrage requis</string>
@@ -66,7 +66,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
     <string name="help_used">a utilisé ces données</string>
-    <string name="help_frozen">est désactivé</string>
+    <string name="help_frozen">est désactivée</string>
     <string name="help_dangerous">est dangereuse</string>
     
 </resources>
