--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -6,8 +6,8 @@
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_usage">Użycie</string>
+    <string name="menu_refresh">Odśwież</string>
     <string name="menu_settings">Ustawienia</string>
     <string name="menu_template">Szablon</string>
     <string name="menu_update">Sprawdź aktualizacje</string>
@@ -66,7 +66,7 @@
     <string name="help_internet">wymaga dostępu do internetu</string>
     <string name="help_granted">wymaga dostępu do tych uprawnień Androida</string>
     <string name="help_used">użyła dostępu do danych</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">jest wyłączona</string>
     <string name="help_dangerous">jest niebezpieczne</string>
     
 </resources>
