--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Aktivitätslog</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_refresh">Aktualisieren</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_template">Template (Vorlage)</string>
     <string name="menu_update">Nach Updates suchen</string>
