--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -6,8 +6,8 @@
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_usage">Использование</string>
+    <string name="menu_refresh">Обновить</string>
     <string name="menu_settings">Параметры</string>
     <string name="menu_template">Шаблон</string>
     <string name="menu_update">Проверить обновления</string>
@@ -66,7 +66,7 @@
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
     <string name="help_used">данные уже использовались</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">отключено</string>
     <string name="help_dangerous">изменение разрешений опасно</string>
     
 </resources>
