--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -5,9 +5,9 @@
     <string name="app_wrongandroid">Testado apenas no Android 4.0, 4.1 e 4.2</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
-    <string name="app_copyright">Direitos de autor \u00A9 2013 por M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="app_copyright">Direitos de autor \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Uso</string>
+    <string name="menu_refresh">Atualizar</string>
     <string name="menu_settings">Definições</string>
     <string name="menu_template">Modelo</string>
     <string name="menu_update">Procurar atualizações</string>
@@ -31,9 +31,8 @@
     <string name="msg_sure">Tem a certeza?</string>
     <string name="msg_done">Concluído</string>
     <string name="msg_reboot">É necessário reiniciar</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_first"><b>A aplicação XPrivacy foi desenvolvida e testada com todo o cuidado, porém é impossível garantir que irá funcionar sem problemas em todos os dispositivos e com todas as aplicações.
+\n\nO uso desta aplicação é inteiramente por sua conta e risco.</b>\n\nVer também a licença:</string>
     <string name="restrict_accounts">Contas (Google, Facebook, etc)</string>
     <string name="restrict_browser">Navegador (favoritos/histórico)</string>
     <string name="restrict_calendar">Calendário</string>
@@ -55,7 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_restrict">Clique para restringir:</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
-    <string name="settings_mac">endereço MAC</string>
+    <string name="settings_mac">Endereço MAC</string>
     <string name="settings_phone">Número de telefone</string>
     <string name="settings_id">Identidade do Android</string>
     <string name="settings_country">País</string>
@@ -66,7 +65,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
     <string name="help_used">Tem usado estes dados</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">Está desativado</string>
     <string name="help_dangerous">É perigoso</string>
 
 </resources>
