--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -6,24 +6,24 @@
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_usage">Χρήση</string>
+    <string name="menu_refresh">Ανανέωση</string>
     <string name="menu_settings">Ρυθμίσεις</string>
     <string name="menu_template">Πρότυπο</string>
     <string name="menu_update">Έλεγχος για ενημερώσεις</string>
     <string name="menu_report">Αναφορά σφάλματος</string>
     <string name="menu_export">Εξαγωγή</string>
     <string name="menu_import">Εισαγωγή</string>
-    <string name="menu_submit">Submit restrictions</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_submit">Υποβολή περιορισμών</string>
+    <string name="menu_fetch">Λήψη περιορισμών</string>
     <string name="menu_theme">Αλλαγή θέματος</string>
     <string name="menu_pro">Έκδοση Pro</string>
     <string name="menu_about">Σχετικά</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">Βοήθεια</string>
     <string name="menu_all">Όλα</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Εκκαθάριση</string>
     <string name="menu_app_launch">Εκκίνηση</string>
-    <string name="menu_app_settings">Ρυθμίσεις</string>
+    <string name="menu_app_settings">Λεπτομέρειες εφαρμογής</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Επιλογή επιτρεπόμενων λογαριασμών</string>
     <string name="menu_contacts">Επιλογή επιτρεπόμενων επαφών</string>
@@ -35,16 +35,16 @@
     <string name="msg_sure">Είστε σίγουρος;</string>
     <string name="msg_done">Τέλος</string>
     <string name="msg_reboot">Απαιτείται επανεκκίνηση</string>
-    <string name="msg_random">Randomize</string>
-    <string name="msg_random_boot">Randomize after boot</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_random">Τυχαία διεύθυνση</string>
+    <string name="msg_random_boot">Τυχαία διεύθυνση μετά την εκκίνηση</string>
+    <string name="msg_first"><b>Μεγάλη προσοχή έχει ληφθεί για την ανάπτυξη και δοκιμή του XPrivacy,
+ωστόσο, είναι αδύνατο να εγγυηθεί ότι θα λειτουργήσει άψογα σε κάθε συσκευή και για κάθε εφαρμογή.
+\n\nΗ χρήση γίνεται αποκλειστικά με δική σας ευθύνη.</b>\n\nΔείτε επίσης την άδεια:</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
     <string name="restrict_calendar">Ημερολόγιο</string>
     <string name="restrict_calling">Κλήσεις (τηλέφωνο, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Πρόχειρο</string>
     <string name="restrict_contacts">Επαφές</string>
     <string name="restrict_dictionary">Λεξικό (χρήστη)</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
@@ -53,7 +53,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_media">Πολυμέσα (ήχοι, φωτογραφίες, βίντεο)</string>
     <string name="restrict_messages">Μηνύματα (SMS, MMS)</string>
     <string name="restrict_network">Δίκτυο (διευθύνσεις)</string>
-    <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_notifications">Ειδοποιήσεις</string>
     <string name="restrict_phone">Τηλέφωνο (στοιχεία, αριθμοί, κλήσεις)</string>
     <string name="restrict_storage">Αποθ. χώρος (πολυμέσα, κάρτα SD)</string>
     <string name="restrict_shell">Shell (εντολές, superuser)</string>
@@ -62,8 +62,8 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_category">Κατηγορία:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
-    <string name="settings_serial">Serial#</string>
+    <string name="title_filters">{0,choice,0#Κανένα ενεργό φίλτρο|1#1 ενεργό φίλτρο|1&lt;{0} ενεργά φίλτρα}</string>
+    <string name="settings_serial">Σειριακός αριθμός</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
     <string name="settings_mac">Διεύθυνση MAC</string>
@@ -78,7 +78,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
     <string name="help_used">έχει χρησιμοποιήσει αυτά τα δεδομένα</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">είναι απενεργοποιημένη</string>
     <string name="help_dangerous">είναι επικίνδυνη</string>
 
 </resources>
