--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -61,8 +61,11 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_view">Tonen (browser)</string>
     <string name="title_category">Categorie:</string>
     <string name="title_restrict">Vink aan om te beperken:</string>
-    <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#Geen filters actief|1#1 filter actief|1&lt;{0} filters actief}</string>
+    <string name="title_nofilter">No active filter</string>
+    <plurals name="title_filters">
+        <item quantity="one">1 active filter</item>
+        <item quantity="other">%d actives filters</item>
+    </plurals>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
