--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -61,8 +61,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">גישה (דפדפן)</string>
     <string name="title_category">קטגוריה:</string>
     <string name="title_restrict">בחר להגביל:</string>
-    <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
+    <string name="title_nofilter">No active filter</string>
+    <plurals name="title_filters">
+        <item quantity="one">1 active filter</item>
+        <item quantity="other">%d actives filters</item>
+    </plurals>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">קו אורך</string>
     <string name="settings_lon">קו רוחב</string>
