--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -59,8 +59,11 @@
     <string name="restrict_view">Vista (navegador)</string>
     <string name="title_category">Categoria:</string>
     <string name="title_restrict">Activa per a restringir:</string>
-    <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
+    <string name="title_nofilter">No active filter</string>
+    <plurals name="title_filters">
+        <item quantity="one">1 active filter</item>
+        <item quantity="other">%d actives filters</item>
+    </plurals>
     <string name="settings_serial">Número de sèrie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
